# webots-ros2-gateway

./: .gitignore  README.md
example/install/: local_setup.sh  setup.sh
example/install/wbtros2_example/lib/wbtros2_example/: mqtt2ros_example  ros2mqtt_example  wbtros2_example
example/install/wbtros2_example/share/wbtros2_example/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  wbtros2_example_launch.py
example/install/wbtros2_interface/share/wbtros2_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
example/install/wbtros2_interface/share/wbtros2_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  (+14 more)
example/install/wbtros2_package/lib/wbtros2_package/: wbtros2_ros2handler
example/install/wbtros2_package/share/wbtros2_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh  wbtros2_ros2handler_launch.py
example/log/: latest_build
example/src/wbtros2_example/: setup.cfg
example/src/wbtros2_example/wbtros2_example/modules/: ros2mqtt_example_node.py
example/src/wbtros2_interface/: CMakeLists.txt
example/src/wbtros2_package/wbtros2_package/modules/: wbtros2_ros2handler_node.py
example/wsl_ros2/src/wbtros2_example/: setup.py
example/wsl_ros2/src/wbtros2_package/: package.xml  setup.cfg
src/: Dockerfile  compose.yml  mosquitto.conf
src/ros_packages/wbtros2_package/wbtros2_package/: wbtros2_ros2handler.py
src/wbtros2_package/: setup.py
src/wbtros2_webots/: wbthandler.py
src/webots_module/: wbthandler.py
(+16 files in other folders)
